--- a/INKOSTEL/.github/workflows/ci.yml
+++ b/INKOSTEL/.github/workflows/ci.yml
@@ -1,1 +1,59 @@
 
+name: Laravel CI
+
+on:
+  push:
+    branches:
+      - main  # Jalankan CI pada setiap push ke branch utama
+  pull_request:
+    branches:
+      - main  # Jalankan CI setiap kali ada pull request ke branch utama
+
+jobs:
+  laravel-tests:
+    runs-on: ubuntu-latest
+
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: testing
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+        ports:
+          - 3306:3306
+        volumes:
+          - /home/runner/work/_temp/_github_home:/github/home
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'  # Menggunakan PHP versi 8.2
+          extensions: mbstring, exif, pcntl, bcmath
+          ini-values: post_max_size=256M, max_execution_time=300
+          coverage: xdebug
+
+      - name: Install dependencies
+        run: |
+          composer install
+          cp .env.example .env
+          php artisan key:generate
+
+      - name: Configure .env for testing
+        run: |
+          sed -i 's/DB_HOST=127.0.0.1/DB_HOST=127.0.0.1/' .env
+          sed -i 's/DB_DATABASE=laravel/DB_DATABASE=testing/' .env
+          sed -i 's/DB_USERNAME=root/DB_USERNAME=user/' .env
+          sed -i 's/DB_PASSWORD=/DB_PASSWORD=password/' .env
+
+      - name: Run migrations
+        run: php artisan migrate --force
+
+      - name: Run tests
+        run: php artisan test
