--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,7 +8,6 @@ on:
 
 jobs:
   laravel-tests:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -16,20 +15,22 @@ jobs:
       with:
         php-version: '8.2'
     - uses: actions/checkout@v4
+    - name: List Files
+      run: ls -la INKOSTEL_BACKUP # Menunjuk ke direktori yang benar
     - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+      run: php -r "file_exists('INKOSTEL_BACKUP/.env') || copy('INKOSTEL_BACKUP/.env.example', 'INKOSTEL_BACKUP/.env');"
     - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --verbose
+      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --verbose -d INKOSTEL_BACKUP
     - name: Generate key
-      run: php artisan key:generate
+      run: php INKOSTEL_BACKUP/artisan key:generate
     - name: Directory Permissions
-      run: chmod -R 777 storage bootstrap/cache
+      run: chmod -R 777 INKOSTEL_BACKUP/storage INKOSTEL_BACKUP/bootstrap/cache
     - name: Create Database
       run: |
-        mkdir -p database
-        touch database/database.sqlite
+        mkdir -p INKOSTEL_BACKUP/database
+        touch INKOSTEL_BACKUP/database/database.sqlite
     - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
       env:
         DB_CONNECTION: sqlite
-        DB_DATABASE: database/database.sqlite
-      run: php artisan test
+        DB_DATABASE: INKOSTEL_BACKUP/database/database.sqlite
+      run: php INKOSTEL_BACKUP/artisan test
