--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -1,36 +1,33 @@
-name: Laravel
+name: Laravel CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  laravel-tests:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
-      with:
-        php-version: '8.2'
-    - uses: actions/checkout@v4
-    - name: List Files
-      run: ls -la INKOSTEL_BACKUP # Menunjuk ke direktori yang benar
-    - name: Copy .env
-      run: php -r "file_exists('INKOSTEL_BACKUP/.env') || copy('INKOSTEL_BACKUP/.env.example', 'INKOSTEL_BACKUP/.env');"
-    - name: Install Dependencies
-      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --verbose -d INKOSTEL_BACKUP
-    - name: Generate key
-      run: php INKOSTEL_BACKUP/artisan key:generate
-    - name: Directory Permissions
-      run: chmod -R 777 INKOSTEL_BACKUP/storage INKOSTEL_BACKUP/bootstrap/cache
-    - name: Create Database
-      run: |
-        mkdir -p INKOSTEL_BACKUP/database
-        touch INKOSTEL_BACKUP/database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPUnit/Pest
-      env:
-        DB_CONNECTION: sqlite
-        DB_DATABASE: INKOSTEL_BACKUP/database/database.sqlite
-      run: php INKOSTEL_BACKUP/artisan test
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "8.2" 
+
+      - name: Copy .env.example to .env
+        run: cp ./INKOSTEL/.env ./INKOSTEL/.env.backup
+
+      - name: Run Composer
+        run: composer install --no-interaction
+        working-directory: ./INKOSTEL
+
+      - name: Run tests
+        run: php artisan test
+        working-directory: ./INKOSTEL
