--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -28,6 +28,6 @@ jobs:
         run: composer install --no-interaction
         working-directory: ./INKOSTEL
 
-      - name: Run Tests
-        run: vendor/bin/phpunit --testsuite Unit
+      - name: Run tests
+        run: php artisan test
         working-directory: ./INKOSTEL
